# HW_19.2

./: catalog.json  pyproject.toml
catalog/: admin.py  models.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at_alter_category_name_and_more.py
catalog/templates/: home.html
config/: settings.py  urls.py
